# StochHMM

./: .gitattributes  .gitignore  AUTHORS  COPYING  INSTALL.txt  Makefile.am  Makefile.in  README  README.md  _c_d_f_8cpp.html  _c_d_f_8cpp_source.html  _c_d_f_8h.html  _c_d_f_8h_source.html  _counter_8cpp.html  _counter_8cpp_source.html  _counter_8h.html  _counter_8h.js  _counter_8h_source.html  _formulas.tex  _motif_scorer_8cpp.html  _motif_scorer_8cpp.js  _motif_scorer_8cpp_source.html  _motif_scorer_8h.html  _motif_scorer_8h.js  _motif_scorer_8h_source.html  _p_d_f_8cpp.html  _p_d_f_8cpp.js  _p_d_f_8cpp_source.html  _p_d_f_8d_source.html  _p_d_f_8h.html  _p_d_f_8h.js  _p_d_f_8h_source.html  _stoch_h_m_m_8cpp.html  _stoch_h_m_m_8cpp.js  _stoch_h_m_m_8cpp_source.html  _stoch_h_m_m_8d_source.html  _stoch_h_m_m__usage_8h.html  _stoch_h_m_m__usage_8h.js  _stoch_h_m_m__usage_8h_source.html  _stoch_h_m_mlib_8h.html  (+630 more)
src/: CDF.cpp  CDF.h  Counter.cpp  Counter.h  Doxyfile  Makefile  Makefile.am  Makefile.in  MotifScorer.cpp  MotifScorer.h  PDF.cpp  PDF.h  StochHMM.cpp  StochHMM_usage.h  StochHMMlib.h  StochHMMmv.cpp  alignment.cpp  alignment.h  backward.cpp  basicTrellis.cpp  basicTrellis.h  baum_welch.cpp  bitwise_ops.cpp  bitwise_ops.h  distributions.cpp  distributions.h  dynamic_bitset.cpp  dynamic_bitset.h  emm.cpp  emm.h  externDefinitions.cpp  externDefinitions.h  externalFuncs.cpp  externalFuncs.h  forward.cpp  forward_viterbi.cpp  hmm.cpp  hmm.h  index.cpp  index.h  (+77 more)
src/deprecated/: basicTrellis.h  mem_trellis.cpp  mem_trellis.h  mem_viterbi.cpp  mem_viterbi.h  nthTrellis.h  old_trellis.cpp  old_trellis.h  table.h  (+4 more)
(+244 files in other folders)
