lib_LIBRARIES = libstochhmm.a
libstochhmm_a_SOURCES = \
	pwm.cpp \
	PDF.cpp \
	trellis.cpp \
	viterbi.cpp \
	stoch_viterbi.cpp \
	stoch_forward.cpp \
	nth_best.cpp \
	stochTable.cpp \
	backward.cpp \
	forward.cpp \
	baum_welch.cpp \
	forward_viterbi.cpp \
	posterior.cpp \
	traceback_path.cpp \
	externDefinitions.cpp \
	index.cpp \
	stochMath.cpp \
	text.cpp \
	userFunctions.cpp \
	hmm.cpp \
	state.cpp \
	lexicalTable.cpp \
	track.cpp \
	emm.cpp \
	externalFuncs.cpp \
	modelTemplate.cpp \
	transitions.cpp \
	weight.cpp \
	options.cpp \
	seqJobs.cpp \
	seqTracks.cpp \
	sequence.cpp \
	sequences.cpp \
	bitwise_ops.cpp \
	dynamic_bitset.cpp 
INCLUDES = -I ./